# NurAI-support

./: README.md  pyproject.toml
docs/: incident_automation_requirements.md  project_decisions.md
temp/: plan_google_chat_jira_integration.md
